--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
 
         <!-- Main App -->
         <div id="main-app" class="screen">
+            <!-- Scroll Indicator -->
+            <div class="scroll-indicator" id="scroll-indicator">
+                <div class="scroll-arrow">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M7 13l3 3 7-7"/>
+                        <path d="M7 6l3 3 7-7"/>
+                    </svg>
+                </div>
+            </div>
+
             <!-- Navigation -->
             <nav class="nav-bar">
                 <div class="nav-brand">
